2019-02-14  Mark Wielaard  <mark@klomp.org>

	* elf_begin.c (read_long_names): Make sure ar_size is properly
	terminated. Sanity check len early if we can.

2019-01-18  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (INSTALL_ELFH): Add elf.h to include_HEADERS when
	defined, otherwise (the default) add elf.h to noinst_HEADERS.

2019-01-16  Mark Wielaard  <mark@klomp.org>

	* note_xlate.h (elf_cvt_note): Check n_namesz and n_descsz don't
	overflow note_len into note header.

2018-11-17  Mark Wielaard  <mark@klomp.org>

	* elf32_updatefile.c (updatemmap): Make sure to call convert
	function on a properly aligned destination.

2018-11-16  Mark Wielaard  <mark@klomp.org>

	* libebl.h (__elf32_msize): Mark with const attribute.
	(__elf64_msize): Likewise.

2018-11-13  Mark Wielaard  <mark@klomp.org>

	* elf_getdata.c (__libelf_set_rawdata_wrlock): Explicitly set the
	alignment of SHF_COMPRESSED data to the alignment of ELF_T_CHDR.
	* elf_compress.c (elf_compress): After compression set sh_addralign
	to the alignment of ELF_T_CHDR.

2018-11-09  Mark Wielaard  <mark@klomp.org>

	* elf_compress_gnu.c (elf_compress_gnu): Use elf_getdata.

2018-11-12  Mark Wielaard  <mark@klomp.org>

	* elf-knowledge.c (ELF_NOTE_GNU_BUILD_ATTRIBUTE_PREFIX): New define.
	(NT_GNU_BUILD_ATTRIBUTE_{OPEN,FUNC}): Likewise.
	(GNU_BUILD_ATTRIBUTE_TYPE_{NUMERIC,STRING,BOOL_TRUE,BOOL_FALSE}):
	Likewise.
	(GNU_BUILD_ATTRIBUTE_{VERSION,STACK_PROT,RELRO,STACK_SIZE,TOOL,ABI,
	PIC,SHORT_ENUM}): Likewise.

2018-11-09  Mark Wielaard  <mark@klomp.org>

	* elf_compress.c (__libelf_reset_rawdata): Make rawdata change
	explicit by calling __libelf_set_data_list.
	* elf_getdata.c (convert_data): Don't convert if type is ELF_T_BYTE
	even if endianness is different.

2018-10-18  Mark Wielaard  <mark@klomp.org>

	* libelf.h (Elf_Type): Add ELF_T_NHDR8.
	* libelfP.h (__libelf_data_type): Add align argument.
	(NOTE_ALIGN): Split into...
	(NOTE_ALIGN4): ... and ...
	(NOTE_ALIGN8): this.